# zephyr

./: .clang-format-ignore  .gitignore  CMakeLists.txt  README.en.md  README.md  xd.md
benchmark/: CMakeLists.txt  broadcast_client.cpp  broadcast_server.cpp  kcp_client.cpp  kcp_server.cpp  ping_pong_client.cpp  ping_pong_server.cpp
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/src/: client.cpp  http_client.hpp  http_server.hpp  httpws_server.hpp  ping_test.hpp  rpc_client.hpp  rpc_server.hpp  serial_port.hpp  server.cpp  tcp_client.hpp  tcp_client_character.hpp  tcp_client_dgram.hpp  tcp_client_match_role.hpp  tcp_server.hpp  tcp_server_character.hpp  tcp_server_dgram.hpp  tcp_server_match_role.hpp  udp_cast.hpp  udp_client.hpp  udp_client_kcp.hpp  udp_server.hpp  udp_server_kcp.hpp  websocket_client.hpp  websocket_server.hpp
include/zephyr/: config.hpp  version.hpp  zephyr.hpp
include/zephyr/base/: client.hpp  error.hpp  iopool.hpp  listener.hpp  selector.hpp  server.hpp  session.hpp  session_mgr.hpp  timer.hpp
include/zephyr/base/component/: active_time_cp.hpp  connect_cp.hpp  connect_time_cp.hpp  connect_timeout_cp.hpp  data_persistence_cp.hpp  event_queue_cp.hpp  local_endpoint_cp.hpp  post_cp.hpp  reconnect_timer_cp.hpp  send_cp.hpp  silence_timer_cp.hpp  socket_cp.hpp  user_data_cp.hpp  user_timer_cp.hpp
include/zephyr/base/detail/: allocator.hpp  buffer_wrap.hpp  condition_wrap.hpp  function_traits.hpp  linear_buffer.hpp  object.hpp  util.hpp
include/zephyr/http/: http_client.hpp  http_server.hpp  http_session.hpp  https_client.hpp  https_server.hpp  https_session.hpp  httpws_server.hpp  httpws_session.hpp  httpwss_server.hpp  httpwss_session.hpp  ws_client.hpp  ws_server.hpp  ws_session.hpp  wss_client.hpp  wss_server.hpp  wss_session.hpp
include/zephyr/http/component/: http_send_cp.hpp  ws_stream_cp.hpp
include/zephyr/http/detail/: http_parser.h  http_util.hpp  mime_types.hpp
include/zephyr/http/impl/: http_recv_op.hpp  http_send_op.hpp  ws_send_op.hpp
include/zephyr/icmp/: ping.hpp
include/zephyr/icmp/detail/: icmp_header.hpp  ipv4_header.hpp  ipv6_header.hpp
include/zephyr/rpc/: rpc_client.hpp  rpc_server.hpp  rpc_session.hpp
include/zephyr/rpc/component/: rpc_call_cp.hpp
include/zephyr/rpc/detail/: invoker.hpp  protocol.hpp  rpc_portable_binary.hpp  serialization.hpp
include/zephyr/rpc/impl/: rpc_recv_op.hpp
include/zephyr/scp/: scp.hpp
include/zephyr/tcp/: tcp_client.hpp  tcp_server.hpp  tcp_session.hpp  tcps_client.hpp  tcps_server.hpp  tcps_session.hpp
include/zephyr/tcp/component/: ssl_stream_cp.hpp  tcp_keepalive_cp.hpp
include/zephyr/tcp/impl/: tcp_recv_op.hpp  tcp_send_op.hpp
include/zephyr/udp/: udp_cast.hpp  udp_client.hpp  udp_server.hpp  udp_session.hpp
include/zephyr/udp/component/: kcp_stream_cp.hpp  udp_send_cp.hpp
include/zephyr/udp/detail/: kcp_util.hpp
include/zephyr/udp/impl/: udp_send_op.hpp
include/zephyr/util/: aes.hpp  base64.hpp  defer.hpp  des.hpp  endian.hpp  ikcp.h  ini.hpp  logger.hpp  md5.hpp  noncopyable.hpp  packet.hpp  sha1.hpp  spin_lock.hpp  string.hpp  thread_pool.hpp  uuid.hpp
